--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Recipies</title>
+        <title>Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Project Recipies</h1>
+        <h1>Odin Project Recipes</h1>
         <a href="recipies/pizza.html">Pizza</a>
     </body>
 </html>
