--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Odin Project Recipes</h1>
-        <a href="recipies/pizza.html">Pizza</a>
+        <a href="recipes/pizza.html">Pizza</a>
     </body>
 </html>
