--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 
     <body>
         <h1>Odin Project Recipes</h1>
-        <a href="recipes/pizza.html">Pizza</a>
+        <ul>
+            <li><a href="recipes/pizza.html">Pizza</a></li>
+            <li><a href="recipes/chocolate-cake.html">Chocolate Cake</a></li>
+            <li><a href="recipes/fried-rice.html">Fried Rice</a></li>
+        </ul>
+        
     </body>
 </html>
