Finish fried rice page

--- a/recipes/chocolate-cake.html
+++ b/recipes/chocolate-cake.html
@@ -5,7 +5,7 @@
         <title>Chocolate Cake</title>
     </head>
     <body>
-        <a href="../index.html">Index</a>
+        <a href="../index.html">Home</a>
         <h1>Chocolate Cake</h1>
         <img src="images/chocolate-cake.jpg" width="200" height="200">
         <h2>Description</h2>
