--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -5,7 +5,7 @@
         <title>Fried Rice</title>
     </head>
     <body>
-        <a href="../index.html">Index</a>
+        <a href="../index.html">Home</a>
         <h1>Fried Rice</h1>
         <img src="images/fried-rice.jpg" width="200" height="200">
         <h2>Description</h2>
@@ -26,6 +26,13 @@
             <li>Egg</li>
         </ul>
         <h2>Steps</h2>
-        <ol></ol>
+        <ol>
+            <li>Cookrice</li>
+            <li>Cook veges</li>
+            <li>Mix rice and veges together</li>
+            <li>Add egg</li>
+            <li>Add soy sauce</li>
+        </ol>
+
     </body>
 </html>
