--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Odin Project Recipes</h1>
-        <ul>
+        <h1 class="page-title">Odin Project Recipes</h1>
+        <ul class="nav">
             <li><a href="recipes/pizza.html">Pizza</a></li>
             <li><a href="recipes/chocolate-cake.html">Chocolate Cake</a></li>
             <li><a href="recipes/fried-rice.html">Fried Rice</a></li>
