Add styling to index.html

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     </head>
 
     <body>
-        <h1 class="page-title">Odin Project Recipes</h1>
-        <ul class="nav">
+        <div class="main-body">
+         <h1 class="page-title">Odin Project Recipes</h1>
+         <ul class="nav">
             <li><a href="recipes/pizza.html">Pizza</a></li>
             <li><a href="recipes/chocolate-cake.html">Chocolate Cake</a></li>
             <li><a href="recipes/fried-rice.html">Fried Rice</a></li>
-        </ul>
-        
+         </ul>
+       </div> 
     </body>
 </html>
