Continue workiong on styles

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,12 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Pizza</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <a href="../index.html">Home</a>
-        <h1>Pizza</h1>
+        <div class="main-body">
+            <ul class="nav">
+                <li><a href="../index.html">Home</a></li>
+            </ul>
+        
+        <h1 class="page-title">Pizza</h1>
         <img src="images/pizza.jpg" width="200" height="200">
-        <h2>Description</h2>
+        <h2 class="sub-heading">Description</h2>
         <p>
             Homemade pizza is a culinary canvas, offering endless possibilities for personalizing a classic favorite. 
             It starts with a simple, pliable dough—whether store-bought or crafted from scratch—that becomes a 
@@ -18,8 +23,8 @@
             cooking experience that brings a taste of Italy into your kitchen and guarantees a delicious, 
             crowd-pleasing meal every time.
         </p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="sub-heading method">Ingredients</h2>
+        <ul class="method-content">
             <li>Flour</li>
             <li>Yeast</li>
             <li>Olive Oil</li>
@@ -29,8 +34,8 @@
             <li>Mushrooms</li>
             <li>Cheese</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-heading method">Steps</h2>
+        <ol class="method-content">
             <li>Make dough</li>
             <li>Chop toppings</li>
             <li>Cover dough with sauce</li>
@@ -38,5 +43,6 @@
             <li>Put other toppings on</li>
             <li>Cook in oven</li>
         </ol>
+        </div>
     </body>
 </html>
