--- a/recipes/chocolate-cake.html
+++ b/recipes/chocolate-cake.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Chocolate Cake</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <a href="../index.html">Home</a>
-        <h1>Chocolate Cake</h1>
+        <div class="main-body">
+            <ul class="nav">
+                <li>
+        <a href="../index.html">Home</a></li>
+            </ul>
+        <h1 class="page-title">Chocolate Cake</h1>
         <img src="images/chocolate-cake.jpg" width="200" height="200">
-        <h2>Description</h2>
-        <p>
+        <h2 class="sub-heading">Description</h2>
+        <p class="description-text">
             Rich, moist, and utterly decadent, a classic chocolate cake is a timeless dessert that promises 
             to delight with every bite. The deep cocoa flavor is a comforting indulgence, 
             while the tender crumb melts in your mouth, creating a truly luxurious experience. 
@@ -18,8 +23,8 @@
             from a celebratory birthday to a simple weeknight craving. Its universal appeal lies in 
             its straightforward elegance and the pure, unadulterated joy it brings to anyone who enjoys a slice.
         </p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="sub-heading method">Ingredients</h2>
+        <ul class="method-content">
             <li>Sugar</li>
             <li>Flour</li>
             <li>Milk</li>
@@ -27,12 +32,13 @@
             <li>Butter</li>
             <li>Chocolate Chips</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-heading method">Steps</h2>
+        <ol class="method-content">
             <li>Mix dry ingredients and make a well</li>
             <li>Add wet ingredients in well</li>
             <li>Mix wet and dry ingredients</li>
             <li>Pour mixture into a cake tray and bake</li>
         </ol>
+       </div>
     </body>
 </html>
