--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Fried Rice</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <a href="../index.html">Home</a>
-        <h1>Fried Rice</h1>
+        <div class="main-body">
+        <ul class="nav">
+            <li><a href="../index.html">Home</a></li>
+            
+        </ul>
+        <h1 class="page-title">Fried Rice</h1>
         <img src="images/fried-rice.jpg" width="200" height="200">
-        <h2>Description</h2>
-        <p>
+        <h2 class="sub-heading">Description</h2>
+        <p class="description-text">
             Fried rice is the ultimate one-pan wonder, transforming simple ingredients into a flavorful and satisfying meal. 
             This classic dish is a delicious showcase for leftover rice, which, when tossed into a searing hot wok with a medley 
             of colorful vegetables, savory sauces, and protein, becomes a canvas for endless creativity. 
@@ -18,21 +23,21 @@
             fried rice is a quick and versatile favorite that brings the comforting 
             taste of your favorite takeout right to your kitchen.
         </p>
-        <h2>Ingredients</h2>
-        <ul>
+        <h2 class="sub-heading method">Ingredients</h2>
+        <ul class="method-content">
             <li>Rice</li>
             <li>Mixed Vegetables</li>
             <li>Soy Sauce</li>
             <li>Egg</li>
         </ul>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="sub-heading method">Steps</h2>
+        <ol class="method-content">
             <li>Cookrice</li>
             <li>Cook veges</li>
             <li>Mix rice and veges together</li>
             <li>Add egg</li>
             <li>Add soy sauce</li>
         </ol>
-
+</div>
     </body>
 </html>
