--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -14,7 +14,7 @@
         <h1 class="page-title">Pizza</h1>
         <img src="images/pizza.jpg" width="200" height="200">
         <h2 class="sub-heading">Description</h2>
-        <p>
+        <p class="description-text">
             Homemade pizza is a culinary canvas, offering endless possibilities for personalizing a classic favorite. 
             It starts with a simple, pliable dough—whether store-bought or crafted from scratch—that becomes a 
             crispy or chewy crust in the oven's heat. The magic truly happens with the toppings, where you can 
